2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
	* AggregatingFilter/AggregatingChunk.m: remove debug messages
2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTime/DrawView.m: test for nil window when drawing;
          correct trackingRect setting.

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * General/EntityChunk.h: added missing method declarations
        * PajeSimulator/PajeSimul.h: ditto
        * PajeSimulator/SimulChunk.h: ditto
        * SpaceTimeViewer/STController: abort initialisation if interface
          cannot be loaded

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/STController: better initialisation code for when
          more than one interface file is loaded

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * ReductionFilter/BusyArray: add new enumerator
        * ReductionFilter/BusyNode: add new enumerator
        * ReductionFilter/ReduceEntity: add min/maxValue methods
        * ReductionFilter/ReduceEntityType: call new notification limitsChanged
          instead of dataChanged

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * AggregatingFilter/AggregatingChunk: new class
        * AggregatingFilter/AggregatingChunkArray: move aggregator to 
          AggregatingChunk class; major refactoring, removing most subclasses
        * AggregatingFilter/AggregatingFilter.m: clear cache when
          hierarchyChanged
        * AggregatingFilter/EntityAggregator: implement OneLinkAggregator,
          auxiliary class for LinkAggregator (aggregates one src-dest pair);
          retain temporary times;
        * AggregatingFilter/GNUmakefile: compile new file

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * PajeSimulator/SimulContainer: remove missing chunk notif;
          PajeSimulator/UserLink: better comparision of matching links,
          should work when re-simulating

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>